# greetme-slp-sdk

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  demo_app
examples/: demo_app.cpp
include/: slp_core.h
src/: slp_manager.cpp  tee_stub.cpp
